--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,9 +3,9 @@
 @import 'services';
 
 $blue: #00b0f0;
-.container-fluid {
-    padding: 0;
-}
+// .container-fluid {
+//     padding: 0;
+// }
 
 h2 {
     color: $black-link;
