--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap");
 /*
     Header Styles
 */
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap");
 header {
   display: grid;
   background-color: #f5f5f5;
@@ -12,6 +10,8 @@ header {
   margin: 0;
   font-family: "Roboto", s-apple-system, BlinkMacSystemFont, segoe ui, helvetica neue, Arial, sans-serif;
   grid-template-areas: "logo contact contact" "logo navbar navbar"; }
+  header #menus {
+    display: contents; }
 
 #logo-area {
   grid-area: logo;
@@ -61,6 +61,21 @@ header {
       #navbar-area .link a:hover {
         text-decoration: none; }
 
+/*
+    Carousel Styles
+*/
+.card-img-overlay {
+  margin-left: 250px;
+  padding-top: 100px;
+  width: 60%;
+  font-family: "Roboto", s-apple-system, BlinkMacSystemFont, segoe ui, helvetica neue, Arial, sans-serif; }
+
+.card-title {
+  text-transform: uppercase; }
+
+/*
+    Services Section
+*/
 #services {
   padding-right: 120px;
   padding-left: 120px; }
@@ -74,5 +89,24 @@ header {
   margin-top: 50px;
   padding-bottom: 10px; }
 
-h2 {
-  color: #151515; }
+/*
+    Payment Section Styles
+*/
+#payments {
+  font-family: "Roboto", s-apple-system, BlinkMacSystemFont, segoe ui, helvetica neue, Arial, sans-serif;
+  background: linear-gradient(to right, #4d505244, #383838bb 35%, #000000d7 50%), url(./media/nightlife.jpeg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 500px; }
+
+.btn.btn-primary.btn-lg {
+  padding: 20px 60px;
+  border-radius: 0px;
+  font-family: "Roboto", s-apple-system, BlinkMacSystemFont, segoe ui, helvetica neue, Arial, sans-serif;
+  font-weight: 700;
+  background: linear-gradient(to right, #007bff -10%, #00e39f 110%);
+  border: none; }
+  .btn.btn-primary.btn-lg:hover {
+    background: linear-gradient(45deg, #007bff, #00e39f); }
