--- a/css/main.css
+++ b/css/main.css
@@ -3,43 +3,76 @@
     Header Styles
 */
 header {
-  display: grid;
-  background-color: #f5f5f5;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  margin: 0;
-  font-family: "Roboto", s-apple-system, BlinkMacSystemFont, segoe ui, helvetica neue, Arial, sans-serif;
-  grid-template-areas: "logo contact contact" "logo navbar navbar"; }
+  display: flex;
+  margin: auto;
+  font-family: "Roboto", s-apple-system, BlinkMacSystemFont, segoe ui, helvetica neue, Arial, sans-serif; }
+  header #collapse-menu {
+    font-size: 24px;
+    padding: 10px;
+    cursor: pointer; }
+  @media only screen and (min-width: 1200px) {
+    header #collapse-menu {
+      display: none; } }
+  @media only screen and (max-width: 1199px) {
+    header .nav {
+      display: block; } }
   header #menus {
-    display: contents; }
+    position: fixed;
+    background-color: #fff;
+    z-index: 100;
+    height: 100%;
+    top: 63px;
+    text-align: left;
+    display: none; }
+  @media only screen and (min-width: 1200px) {
+    header {
+      display: grid;
+      background-color: #f5f5f5;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: auto;
+      margin: 0;
+      grid-template-areas: "logo contact contact" "logo navbar navbar"; }
+      header #menus {
+        display: contents; } }
 
 #logo-area {
-  grid-area: logo;
-  background-color: #fff;
-  -webkit-clip-path: polygon(91% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
-  clip-path: polygon(93% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
-  padding: 30px  0 15px 90px; }
-  #logo-area img {
-    max-width: 60%;
-    padding: 15px 5px; }
+  background-color: #fff; }
+  @media only screen and (max-width: 1199px) {
+    #logo-area {
+      padding: 10px; }
+      #logo-area img {
+        max-width: 200px;
+        width: auto;
+        height: auto; } }
+  @media only screen and (min-width: 1200px) {
+    #logo-area {
+      grid-area: logo;
+      -webkit-clip-path: polygon(91% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+      clip-path: polygon(93% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+      padding: 30px  0 15px 90px; }
+      #logo-area img {
+        max-width: 60%;
+        padding: 15px 5px; } }
 
 #header-contact-area {
   grid-area: contact;
-  background-color: #fff;
-  padding-left: 100px;
-  margin-left: -20px;
-  padding-top: 15px;
-  height: 60px;
-  clip-path: polygon(100% 0, 100% 100%, 20% 100%, 1.5% 100%, 0 0); }
-  #header-contact-area #telephone span {
-    font-weight: 700; }
-  #header-contact-area .nav-link {
-    color: #151515; }
-    #header-contact-area .nav-link span:hover, #header-contact-area .nav-link .social:hover {
-      transition: color 0.5s ease;
-      color: #00e39f; }
-    #header-contact-area .nav-link .fas {
-      margin-right: 10px; }
+  background-color: #fff; }
+  @media only screen and (min-width: 1200px) {
+    #header-contact-area {
+      padding-left: 100px;
+      margin-left: -20px;
+      padding-top: 15px;
+      height: 60px;
+      clip-path: polygon(100% 0, 100% 100%, 20% 100%, 1.5% 100%, 0 0); }
+      #header-contact-area #telephone span {
+        font-weight: 700; }
+      #header-contact-area .nav-link {
+        color: #151515; }
+        #header-contact-area .nav-link span:hover, #header-contact-area .nav-link .social:hover {
+          transition: color 0.5s ease;
+          color: #00e39f; }
+        #header-contact-area .nav-link .fas {
+          margin-right: 10px; } }
 
 #navbar-area {
   grid-area: navbar;
@@ -53,6 +86,9 @@ header {
     font-weight: 500;
     border-bottom: solid 5px transparent;
     text-align: center; }
+    @media only screen and (max-width: 1199px) {
+      #navbar-area .link {
+        text-align: left; } }
     #navbar-area .link:hover {
       border-bottom: solid 5px #65E6B2;
       transition: border-bottom 1s ease; }
