--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,31 +3,78 @@
 */
 
 header {
-    display: grid;
-    background-color: $header-grey;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    margin: 0;
+    display: flex;
+    margin: auto;
     font-family: $roboto;
-    grid-template-areas: 
-        "logo contact contact"
-        "logo navbar navbar";
 
-        #menus {
-            display: contents;
+    #collapse-menu {
+        font-size: 24px;
+        padding: 10px;
+        cursor: pointer;
+    }
+
+    @media #{$laptop} {
+        #collapse-menu {
+            display: none;
         }
-}
+    }
+
+    @media #{$mobile} {
+        .nav {
+            display: block;
+        }
+    }
+
+    #menus {
+        position: fixed;
+        background-color: #fff;
+        z-index: 100;
+        height: 100%;
+        top: 63px;
+        text-align: left;
+        display: none;
+    }
+
+    @media #{$laptop} {
+        display: grid;
+        background-color: $header-grey;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto;
+        margin: 0;
+        grid-template-areas: 
+            "logo contact contact"
+            "logo navbar navbar";
+
+            #menus {
+                display: contents;
+            }
+        }
+    }
+    
 
 #logo-area {
-    grid-area: logo;
-    background-color: #fff;
-    -webkit-clip-path: polygon(91% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
-    clip-path: polygon(93% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
-    padding: 30px  0 15px 90px;
-    img {
-        max-width: 60%;
-        padding: 15px 5px;
+    @media #{$mobile} {
+        padding: 10px;
+        img{
+            max-width: 200px;
+            width: auto;
+            height: auto;
+        }
     }
+   
+    
+    background-color: #fff;
+    @media #{$laptop}{
+        grid-area: logo;
+        -webkit-clip-path: polygon(91% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+        clip-path: polygon(93% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+        padding: 30px  0 15px 90px;
+        img {
+            max-width: 60%;
+            padding: 15px 5px;
+        }
+    }
+    
 }
 
 
@@ -35,28 +82,33 @@ header {
 #header-contact-area {
     grid-area: contact;
     background-color: #fff;
-    padding-left: 100px;
-    margin-left: -20px;
-    padding-top: 15px;
-    height: 60px;
-    clip-path: polygon(100% 0, 100% 100%, 20% 100%, 1.5% 100%, 0 0);
-
-    #telephone span {
-        font-weight: 700;
+    @media #{$laptop}{
+        padding-left: 100px;
+        margin-left: -20px;
+        padding-top: 15px;
+        height: 60px;
+        clip-path: polygon(100% 0, 100% 100%, 20% 100%, 1.5% 100%, 0 0);
+        
+        #telephone span {
+            font-weight: 700;
+        }
+        
+        .nav-link {
+            color: $black-link;
+            span, .social{
+                &:hover {
+                    transition: color 0.5s ease;
+                    color: $green-link;
+                }
+            }
+           
+            .fas {
+                margin-right: 10px;
+            }
     }
     
-    .nav-link {
-        color: $black-link;
-        span, .social{
-            &:hover {
-                transition: color 0.5s ease;
-                color: $green-link;
-            }
-        }
-       
-        .fas {
-            margin-right: 10px;
-        }
+
+   
     }
 }
 
@@ -66,6 +118,9 @@ header {
     flex-direction: row;
     font-weight: bolder;
     .link {
+        @media #{$mobile} {
+            text-align: left;
+        }
         padding: 10px 40px 10px 10px;
         font-size: 18px;
         line-height: 1.34;
