--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -14,4 +14,4 @@ $roboto: 'Roboto', s-apple-system,BlinkMacSystemFont,segoe ui,helvetica neue,Ari
 
 $mobile: "only screen and (max-width : 1199px)";
 $laptop: "only screen and (min-width : 1200px)";
-$desktop: "only screen and (min-width : 1679px)";
+$laptop-plus: "only screen and (min-width : 1439px)";
