--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,12 +2,34 @@
     Header Styles
 */
 
+.header-tpad {
+    padding-top: 25px;
+}
+
 header {
     // default for mobile 
+
+
+    @media #{$mobile} {
+        // this overrides Bootstrap 4 default
+        position: fixed;
+        background-color: #fff;
+        width: 100%;
+        z-index: 2;
+
+        #navbar-area {
+            overflow-y: scroll;
+        }
+
+        .nav {
+            display: block;
+        }
+    }
 
     display: flex;
     margin: auto;
     font-family: $roboto;
+    
 
     #collapse-menu {
         font-size: 24px;
@@ -22,22 +44,24 @@ header {
         }
     }
 
-    @media #{$mobile} {
-        // this overrides Bootstrap 4 default
-        .nav {
-            display: block;
-        }
-    }
 
     // default toggle menu for mobile
     #menus {
         position: fixed;
         background-color: #fff;
-        z-index: 100;
+        z-index: -1;
         height: 100%;
-        top: 63px;
+        top: 60px;
         text-align: left;
         display: none;
+        overflow-y: scroll;
+        padding-top: 30px;
+        padding-bottom: 60px;
+    }
+
+    .block-transition {
+        display: block;
+        transition-delay: 1s;
     }
 
     // if laptop or wider screen, show header as grid
@@ -59,8 +83,10 @@ header {
     
 
 #logo-area {
+
     @media #{$mobile} {
         padding: 10px;
+
         img{
             max-width: 200px;
             width: auto;
@@ -70,11 +96,13 @@ header {
    
     
     background-color: #fff;
+
     @media #{$laptop}{
         grid-area: logo;
         -webkit-clip-path: polygon(91% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
         clip-path: polygon(93% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
         padding: 30px  0 15px 90px;
+
         img {
             max-width: 60%;
             padding: 15px 5px;
@@ -84,10 +112,10 @@ header {
 }
 
 
-
 #header-contact-area {
     grid-area: contact;
     background-color: #fff;
+
     @media #{$laptop}{
         padding-left: 100px;
         margin-left: -20px;
@@ -113,7 +141,9 @@ header {
             }
     }
     
-
+    @media #{$laptop-plus}{
+        clip-path: polygon(100% 0, 100% 100%, 20% 100%, 2% 100%, 0 0);
+    }
    
     }
 }
@@ -123,10 +153,16 @@ header {
     display: flexbox;
     flex-direction: row;
     font-weight: bolder;
+
+    @media #{$laptop-plus} {
+        padding-left: 3rem;
+    }
+
     .link {
         @media #{$mobile} {
             text-align: left;
         }
+
         padding: 10px 40px 10px 10px;
         font-size: 18px;
         line-height: 1.34;
