--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,9 +1,11 @@
 // Colors
 
-$header-grey: #f5f5f5;
+$bg-grey: #f1f1f1;
+$text-grey: #777777;
 $green-link: #00e39f;
 $green-link-border: #65E6B2;
-$black-link: #151515;
+$text-black: #151515;
+
 
 // Fonts
 
