--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,32 +25,9 @@ SOFTWARE.
 */
 
 @import 'vars';
+@import 'styles';
 @import 'header';
 @import 'carousel';
 @import 'services';
 @import 'payment';
-
-.btn.btn-primary.btn-lg {
-    padding: 20px 60px;
-    border-radius: 0px;
-    font-family: $roboto;
-    font-weight: 700;
-    background: linear-gradient(to right, #007bff -10%, #00e39f 110%);
-    border: none;
-
-    @media #{$mobile} {
-        padding: 10px 20px;
-    }
-
-    &:hover {
-        background: linear-gradient(45deg, #007bff, #00e39f);
-    }
-}
-
-@media #{$mobile} {
-    .container-fluid {
-        max-width: 100%;
-        min-width: 100%;
-        padding: 0;
-    }
-}
+@import 'assoc';
