--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,30 @@ SOFTWARE.
 
 */
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap");
+.btn.btn-primary.btn-lg {
+  padding: 20px 60px;
+  border-radius: 0px;
+  font-family: "Roboto", s-apple-system, BlinkMacSystemFont, segoe ui, helvetica neue, Arial, sans-serif;
+  font-weight: 700;
+  background: linear-gradient(to right, #007bff -10%, #00e39f 110%);
+  border: none;
+}
+
+@media only screen and (max-width: 1199px) {
+  .btn.btn-primary.btn-lg {
+    padding: 10px 20px;
+  }
+}
+
+.btn.btn-primary.btn-lg:hover {
+  background: linear-gradient(45deg, #007bff, #00e39f);
+}
+
+.col-12 {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
 /*
     Header Styles
 */
@@ -85,7 +109,7 @@ header .block-transition {
 @media only screen and (min-width: 1200px) {
   header {
     display: grid;
-    background-color: #f5f5f5;
+    background-color: #f1f1f1;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
     margin: 0;
@@ -135,7 +159,7 @@ header .block-transition {
     margin-left: -20px;
     padding-top: 15px;
     height: 60px;
-    clip-path: polygon(100% 0, 100% 100%, 20% 100%, 1.5% 100%, 0 0);
+    clip-path: polygon(100% 0, 100% 100%, 20% 100%, 2% 100%, 0 0);
   }
   #header-contact-area #telephone span {
     font-weight: 700;
@@ -149,12 +173,6 @@ header .block-transition {
   }
   #header-contact-area .nav-link .fas {
     margin-right: 10px;
-  }
-}
-
-@media only screen and (min-width: 1200px) and (min-width: 1439px) {
-  #header-contact-area {
-    clip-path: polygon(100% 0, 100% 100%, 20% 100%, 2% 100%, 0 0);
   }
 }
 
@@ -234,6 +252,12 @@ header .block-transition {
   display: table;
 }
 
+@media only screen and (min-width: 1200px) {
+  .card-img-overlay * {
+    padding-bottom: 10px;
+  }
+}
+
 .card-title {
   text-transform: uppercase;
 }
@@ -271,29 +295,30 @@ header .block-transition {
   height: 500px;
 }
 
-.btn.btn-primary.btn-lg {
-  padding: 20px 60px;
-  border-radius: 0px;
-  font-family: "Roboto", s-apple-system, BlinkMacSystemFont, segoe ui, helvetica neue, Arial, sans-serif;
-  font-weight: 700;
-  background: linear-gradient(to right, #007bff -10%, #00e39f 110%);
-  border: none;
+#associations {
+  background-color: #f1f1f1;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
-@media only screen and (max-width: 1199px) {
-  .btn.btn-primary.btn-lg {
-    padding: 10px 20px;
-  }
+#associations .row {
+  margin-right: -15px !important;
+  margin-left: -15px !important;
 }
 
-.btn.btn-primary.btn-lg:hover {
-  background: linear-gradient(45deg, #007bff, #00e39f);
+#associations .row .col-12 {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
-@media only screen and (max-width: 1199px) {
-  .container-fluid {
-    max-width: 100%;
-    min-width: 100%;
-    padding: 0;
-  }
+.assoc-logo {
+  padding: 40px 30px;
+}
+
+.assoc-logo img {
+  max-width: 100%;
+  filter: opacity(60%) grayscale(100%);
+  visibility: visible;
+  opacity: 1;
+  transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
 }
