--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,14 @@ SOFTWARE.
   background: linear-gradient(45deg, #007bff, #00e39f);
 }
 
+.cta-gradient {
+  display: inline-block;
+  width: 40px;
+  height: 3px;
+  margin-right: 15px;
+  background: linear-gradient(to right, #359fd6, #00e39f);
+}
+
 .col-12 {
   padding-left: 0 !important;
   padding-right: 0 !important;
