--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ SOFTWARE.
 
 .cta-gradient {
   display: inline-block;
+  vertical-align: middle;
   width: 40px;
   height: 3px;
   margin-right: 15px;
@@ -54,6 +55,10 @@ SOFTWARE.
 .col-12 {
   padding-left: 0 !important;
   padding-right: 0 !important;
+}
+
+h1 {
+  text-transform: uppercase;
 }
 
 /*
