--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -17,6 +17,7 @@
 
 .cta-gradient {
     display: inline-block;
+    vertical-align: middle;
     width: 40px;
     height: 3px;
     margin-right: 15px;
@@ -26,4 +27,8 @@
 .col-12 {
     padding-left: 0 !important;
     padding-right: 0 !important;
+}
+
+h1 {
+    text-transform: uppercase;
 }
