--- a/css/main.css
+++ b/css/main.css
@@ -46,10 +46,11 @@ SOFTWARE.
 .cta-gradient {
   display: inline-block;
   vertical-align: middle;
-  width: 40px;
+  width: 50px;
   height: 3px;
+  margin-top: -5px;
   margin-right: 15px;
-  background: linear-gradient(to right, #359fd6, #00e39f);
+  background: linear-gradient(to right, #007bff -10%, #00e39f);
 }
 
 .col-12 {
@@ -218,7 +219,7 @@ header .block-transition {
 }
 
 #navbar-area .link:hover {
-  border-bottom: solid 5px #65E6B2;
+  border-bottom: solid 5px #00e39f;
   transition: border-bottom 1s ease;
 }
 
@@ -308,6 +309,9 @@ header .block-transition {
   height: 500px;
 }
 
+/*
+    Association styles
+*/
 #associations {
   background-color: #f1f1f1;
   padding-top: 40px;
