--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -2,8 +2,8 @@
 
 $bg-grey: #f1f1f1;
 $text-grey: #777777;
+$blue-highlight: #007bff;
 $green-link: #00e39f;
-$green-link-border: #65E6B2;
 $text-black: #151515;
 
 
