--- a/css/main.css
+++ b/css/main.css
@@ -310,7 +310,7 @@ header .block-transition {
 }
 
 /*
-    Association styles
+    Association Section styles
 */
 #associations {
   background-color: #f1f1f1;
