--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,5 +31,8 @@ SOFTWARE.
 @import 'services';
 @import 'payment';
 @import 'assoc';
+@import 'testimonials';
+@import 'research';
+@import 'physicians';
 
 
