--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -5,6 +5,7 @@ $text-grey: #777777;
 $blue-highlight: #007bff;
 $green-link: #00e39f;
 $text-black: #151515;
+$border-shadow-black: rgba(0, 9, 9, .2);
 
 
 // Fonts
