--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,11 +1,13 @@
 // Colors
 
 $bg-grey: #f1f1f1;
+$bg-grey2: #c5c1c1;
 $text-grey: #777777;
 $blue-highlight: #007bff;
 $green-link: #00e39f;
 $text-black: #151515;
 $border-shadow-black: rgba(0, 9, 9, .2);
+$footer-grey: #2c2c2c;
 
 
 // Fonts
