--- a/css/main.css
+++ b/css/main.css
@@ -458,6 +458,18 @@ header .block-transition {
   color: #fff;
 }
 
+.doc-pic .overlay .text h5 {
+  color: #c5c1c1;
+}
+
 .doc-pic:hover .overlay {
   height: 100%;
+}
+
+/*
+    Footer Styles
+*/
+footer {
+  background-color: #2c2c2c;
+  min-height: 70px;
 }
