--- a/scss/_physicians.scss
+++ b/scss/_physicians.scss
@@ -33,6 +33,10 @@
         .text {
             padding-top: 140px;
             color: #fff;
+
+            h5 {
+                color: $bg-grey2;
+            }
         }
     }
 
