--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -15,6 +15,10 @@
     }
 }
 
+.form-button > .btn.btn-primary.btn-lg {
+    padding: 10px 20px;
+}
+
 .cta-gradient {
     display: inline-block;
     vertical-align: middle;
