--- a/scss/_physicians.scss
+++ b/scss/_physicians.scss
@@ -8,7 +8,7 @@
 #doc-pics {
     width: 100%;
     display: flex;
-    flex-flow: row;
+    flex-flow: row wrap;
     padding: 0 50px;
     text-align: center;
     align-items: center;
