--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ Copyright (c) 2019 Jacob Shore
   border: none;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 1099px) {
   .btn.btn-primary.btn-lg {
     padding: 10px 20px;
   }
@@ -67,7 +67,7 @@ header {
   font-family: "Roboto", s-apple-system, BlinkMacSystemFont, segoe ui, helvetica neue, Arial, sans-serif;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 1099px) {
   header {
     position: fixed;
     background-color: #fff;
@@ -130,7 +130,7 @@ header .block-transition {
   background-color: #fff;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 1099px) {
   #logo-area {
     padding: 10px;
   }
@@ -196,7 +196,7 @@ header .block-transition {
 }
 
 #navbar-area .link {
-  padding: 10px 40px 10px 10px;
+  padding: 10px 20px 10px 10px;
   font-size: 18px;
   line-height: 1.34;
   font-weight: 500;
@@ -204,7 +204,7 @@ header .block-transition {
   text-align: center;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 1099px) {
   #navbar-area .link {
     text-align: left;
   }
@@ -213,6 +213,12 @@ header .block-transition {
 #navbar-area .link:hover {
   border-bottom: solid 5px #00e39f;
   transition: border-bottom 1s ease;
+}
+
+@media only screen and (min-width: 1439px) {
+  #navbar-area .link {
+    padding: 10px 40px 10px 10px;
+  }
 }
 
 #navbar-area .link a {
@@ -234,7 +240,7 @@ header .block-transition {
   border-radius: 0;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 1099px) {
   .card {
     min-height: 500px;
   }
@@ -249,7 +255,7 @@ header .block-transition {
   min-width: 100%;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 1099px) {
   .display-4 {
     font-size: 1.5rem;
   }
@@ -327,7 +333,7 @@ header .block-transition {
   padding: 90px 30px;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 1099px) {
   .assoc-logo {
     padding: 30px;
   }
@@ -355,7 +361,7 @@ header .block-transition {
   font-size: 1rem;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 1099px) {
   .owl-item .card {
     min-height: 200px;
   }
@@ -438,7 +444,7 @@ header .block-transition {
   justify-content: center;
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (max-width: 1099px) {
   #doc-pics {
     flex-flow: row wrap;
   }
