--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -161,7 +161,7 @@ header {
             text-align: left;
         }
 
-        padding: 10px 40px 10px 10px;
+        padding: 10px 20px 10px 10px;
         font-size: 18px;
         line-height: 1.34;
         font-weight: 500;
@@ -171,6 +171,10 @@ header {
             border-bottom: solid 5px $green-link;
             transition: border-bottom 1s ease;
 
+        }
+
+        @media #{$laptop-plus} {
+            padding: 10px 40px 10px 10px;
         }
 
 
