--- a/css/main.css
+++ b/css/main.css
@@ -482,6 +482,10 @@ header .block-transition {
 
 /*
     Footer Styles
+    =====================
+
+    this was just taken directly from another template given for reference.
+
 */
 footer {
   background-color: #2c2c2c;
