--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,9 @@
 /*
     Footer Styles
+    =====================
+
+    this was just taken directly from another template given for reference.
+
 */
 
 footer {
