footer scss changes

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,7 @@
     Footer Styles
     =====================
 
-    this was just taken directly from another template given for reference.
+    Except for the first class, this was just taken directly from another template given for reference.
 
 */
 
