--- a/css/main.css
+++ b/css/main.css
@@ -484,7 +484,7 @@ header .block-transition {
     Footer Styles
     =====================
 
-    this was just taken directly from another template given for reference.
+    Except for the first class, this was just taken directly from another template given for reference.
 
 */
 footer {
