--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -27,7 +27,7 @@ footer {
 */
 .footer-classic {
 	text-align: center;
-	background: #343c49 url(../images/bg-footer.jpg) 50% 50% no-repeat;
+	background: #343c49;
 	background-size: cover;
 }
 
