--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ header .block-transition {
 @media only screen and (min-width: 1100px) {
   #logo-area {
     grid-area: logo;
-    -webkit-clip-path: polygon(91% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
+    -webkit-clip-path: polygon(93% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
     clip-path: polygon(93% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
     padding: 30px  0 15px 90px;
   }
@@ -165,6 +165,7 @@ header .block-transition {
     margin-left: -20px;
     padding-top: 15px;
     height: 60px;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 20% 100%, 2% 100%, 0 0);
     clip-path: polygon(100% 0, 100% 100%, 20% 100%, 2% 100%, 0 0);
   }
   #header-contact-area #telephone span {
@@ -494,6 +495,10 @@ footer {
 
 .footer-modern-list a, .footer-modern-list a:focus, .footer-modern-list a:active {
   color: rgba(255, 255, 255, 0.8);
+}
+
+.footer-modern-list {
+  padding-inline-start: 0px;
 }
 
 .footer-modern-list > li {
