--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -12,7 +12,12 @@ footer {
 }
 
 .footer-modern-list a, .footer-modern-list a:focus, .footer-modern-list a:active {
-    color: rgba(255, 255, 255, 0.8);
+	color: rgba(255, 255, 255, 0.8);
+
+}
+
+.footer-modern-list {
+	padding-inline-start: 0px;
 }
 
 .footer-modern-list > li {
